--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <script src="https://counterapi.com/c.js" async></script>
 </body>
 
 </html>
